--- a/index.html
+++ b/index.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>compito 27/11</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div id="container">
+        <button id="bigBtn" type="button">
+          <img id="logo" src="assets/img/logo.png" alt="logo ape" />SHOP
+        </button>
+        <button class="smallBtn" type="button">Our Honey</button>
+        <button class="smallBtn" type="button">Trace Honey</button>
+        <button class="smallBtn" type="button">Facilities</button>
+        <button class="smallBtn" type="button">Contacts</button>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h1>Best Selling Products</h1>
+        <div id="cardsContainer">
+          <div class="cards">
+            <div class="cardsImg"></div>
+            <div class="cardsText">
+              <div>
+                <h4>100% Bio Honey</h4>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
+            </div>
+            <button type="button">Add to cart</button>
+          </div>
+          <div class="cards">
+            <div class="cardsImg"></div>
+            <div class="cardsText">
+              <div>
+                <h4>100% Bio Honey</h4>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
+            </div>
+            <button type="button">Add to cart</button>
+          </div>
+          <div class="cards">
+            <div class="cardsImg"></div>
+            <div class="cardsText">
+              <div>
+                <h4>100% Bio Honey</h4>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
+            </div>
+            <button type="button">Add to cart</button>
+          </div>
+          <div class="cards">
+            <div class="cardsImg"></div>
+            <div class="cardsText">
+              <div>
+                <h4>100% Bio Honey</h4>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
+            </div>
+            <button type="button">Add to cart</button>
+          </div>
+          <div class="cards">
+            <div class="cardsImg"></div>
+            <div class="cardsText">
+              <div>
+                <h4>100% Bio Honey</h4>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
+            </div>
+            <button type="button">Add to cart</button>
+          </div>
+        </div>
+      </section>
+      <aside>
+        <h2>Latest News</h2>
+        <div>
+          <h3>Our delicious honey</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+            molestias ullam provident pariatur rem nulla, minima aspernatur
+            voluptatibus sapiente assumenda asperiores nihil debitis quos fugit
+            repellat accusantium ipsa sint. Beatae! Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Molestiae officiis rerum minima
+            excepturi, neque adipisci. Sint magni voluptates porro qui totam
+            hic! Deserunt, ipsam? Pariatur, animi? Magni, ullam debitis.
+            Perferendis.
+          </p>
+          <img src="assets/img/honey.jpg" />
+        </div>
+      </aside>
+    </main>
+  </body>
 </html>
